<resources>
    <string name="app_name">Recipe Master</string>
    <string name="text2">Get the latest, quickest and easiest home recipies.</string>
    <string name="text1">Recipe Master</string>
    <string name="button1">Get Started</string>
    <string name="text3">Recipe Master</string>
    <string name="text4">Cooking a Delicious Food Easily</string>
    <string name="text5">SIGN UP</string>
    <string name="text6">LOGIN</string>
    <string name="text7">LOGIN</string>
    <string name="text8">Username</string>
    <string name="password">Password</string>
    <string name="text9">forgot Password?</string>
    <string name="text10">Login</string>
    <string name="button2">Login</string>
    <string name="text11">SIGN UP</string>
    <string name="text12">Don\'t have an account?</string>
    <string name="text13">SignUp</string>
    <string name="text14">Email</string>
    <string name="text15">Full Name</string>
    <string name="text16">Phone Number</string>
    <string name="text17">Password</string>
    <string name="button3">Sign Up</string>
    <string name="text18">Discover more than 1200 food recipes in your hands and cooking it easily</string>
    <string name="text19">Home</string>
    <string name="text20">Breakfast</string>
    <string name="text21">Categories</string>
    <string name="text22">Get Amazing Recipes For Cooking</string>
    <string name="text23">Lunch</string>
    <string name="text24">Dinner</string>
    <string name="text25">Pasta</string>
    <string name="text26">Most Popular</string>
    <string name="text27">Tomato Goat Cheesy Pasta</string>
    <string name="text28">Baked Chicken with Salad</string>
    <string name="text29">Asparagus Italian Dish</string>
    <string name="text30">45Min | Easy</string>
    <string name="text31">Recipe</string>
    <string name="text32">Quick and Easy Lunch Formulas for Any Eating Style!</string>
    <string name="text33">LUNCH</string>
    <string name="text34">Recipes For</string>
    <string name="text35">Poached Egg with Oven Raosted Tomato Sandwich</string>
    <string name="text36">Vegan Hummus Salad Bowl</string>
    <string name="text37">Chicken burrito bowl with rice and beans</string>
    <string name="text38">Summer Chicken Wraps with peanut sauce</string>
    <string name="button4">Recipe</string>
    <string name="text39">15Min | Easy</string>
    <string name="text40">45Min | Healthy|Easy </string>
    <string name="text41"><![CDATA[20Min | Quick & Easy]]></string>
    <string name="text42"><![CDATA[30Min | Healthy & Easy]]></string>
    <string name="text43">Food Ingredients</string>
    <string name="text44">Vegan Hummus Salad Bowl</string>
    <string name="text45">Lunch Recipe</string>
    <string name="text46">About Recipe</string>
    <string name="text47">"A hummus bowl makes the best easy lunch or dinner No cooking required!This salad is delicious and also packed with protein, fiber, vitamins, and minerals, making it a nutritious and satisfying meal option for vegans and non-vegans alike. Feel free to customize the salad by adding your favorite veggies or toppings "</string>
    <string name="text48">Ingredients</string>
    <string name="button5">See Recipe</string>
    <string name="text49">1 cup cherry tomatoes, halved\n1 cucumber, diced\n1 bell pepper, diced\n1/4 red onion, thinly sliced</string>
    <string name="text50">1/4 cup olive oil\n2 tablespoons lemon juice\n2 cloves garlic, minced\nSalt and pepper to taste</string>
    <string name="text51">Food Recipe</string>
    <string name="text52">How to Cook</string>
    <string name="text53">In a large mixing bowl, combine the chickpeas, cherry tomatoes, cucumber, bell pepper, red onion, mixed greens, parsley, and Kalamata olives (if using). Toss gently to mix.\n\nIn a small bowl, whisk together the olive oil, lemon juice, minced garlic, salt, and pepper to make the dressing.\n\nPour the dressing over the salad and toss until everything is evenly coated.\n\nSpoon the hummus onto the salad in dollops.</string>
    <string name="text54">My Profile</string>
    <string name="text55">PROFILE</string>
    <string name="text56">Shashini Jayasekara</string>
    <string name="button6">"Go Back "</string>
    <string name="button7">Delete Account</string>
    <string name="button8">Edit</string>
    <string name="text57">Full Name:Shashini Jayasekara</string>
    <string name="text58">Email:shash@gmail.com</string>
    <string name="text59">Phone:071232345</string>
    <string name="text60">Step into a world of</string>
    <string name="text61">Our Recipe Master</string>
    <string name="text62">Already have an Account?</string>
    <string name="text63">Login</string>
</resources>