<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:background="@color/color2"
    android:backgroundTint="@color/black"
    tools:context=".Onboard">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="249dp"
        android:layout_height="125dp"
        android:text="@string/text3"
        android:textAlignment="center"
        android:textColor="#FFC107"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.43" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="361dp"
        android:layout_height="51dp"
        android:text="@string/text4"
        android:textAlignment="center"
        android:textColor="#FBFBFB"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.555" />

    <Button
        android:id="@+id/button2"
        android:layout_width="289dp"
        android:layout_height="63dp"
        android:backgroundTint="@color/color1"
        android:onClick="onclick"
        android:text="@string/text5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.774" />

    <Button
        android:id="@+id/button3"
        android:layout_width="294dp"
        android:layout_height="67dp"
        android:backgroundTint="@color/white"
        android:onClick="onclick"
        android:text="@string/text6"
        android:textColor="#090909"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.894" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="313dp"
        android:layout_height="54dp"
        android:text="@string/text18"
        android:textAlignment="center"
        android:textColor="#757171"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.649" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="408dp"
        android:layout_height="269dp"
        android:scaleType="fitXY"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/loginsignuptwo" />

</androidx.constraintlayout.widget.ConstraintLayout>